--- a/project/index.html
+++ b/project/index.html
@@ -61,7 +61,7 @@
                                 </table>
                                 <div class="my-acc-menu__price">
                                     <p class="my-acc-menu__price-text">TOTAL</p>
-                                    <p class="my-acc-menu__price-text"  id="my-acc-menu-price">$500.00</p>
+                                    <p class="my-acc-menu__price-text"  id="my-acc-menu-price">$0</p>
                                 </div>
                                 <a class="my-acc-menu__button" href="checkout.html">Checkout</a>
                                 <a class="my-acc-menu__button" href="shopping_cart.html">Go&nbsp;to&nbsp;cart</a>
@@ -343,7 +343,7 @@
         </div>
     </footer>
 </div>
-<script src="js/catalog.js"></script>
 <script src="js/js.js"></script>
+<script src="js/featuredItems.js"></script>
 </body>
 </html>
