--- a/project/product.html
+++ b/project/product.html
@@ -61,7 +61,7 @@
                                 </table>
                                 <div class="my-acc-menu__price">
                                     <p class="my-acc-menu__price-text">TOTAL</p>
-                                    <p class="my-acc-menu__price-text" id="my-acc-menu-price">$500.00</p>
+                                    <p class="my-acc-menu__price-text" id="my-acc-menu-price">$0</p>
                                 </div>
                                 <a class="my-acc-menu__button" href="checkout.html">Checkout</a>
                                 <a class="my-acc-menu__button" href="shopping_cart.html">Go&nbsp;to&nbsp;cart</a>
@@ -243,7 +243,8 @@
                         </fieldset>
                         <fieldset class="product-form__block price">
                             <legend class="price__caption">PRICE</legend>
-                            <input type="range" name="price_range" id="range" min="42" max="400" step="1" class="price__range" onchange="document.getElementById('range').innerHTML = this.value;">
+                            <input type="range" name="price_range" id="range" min="42" max="400" step="1" class="price__range" onchange="document.getElementById('range').innerHTML =
+                                   this.value;">
                             <div class="price__field">
                                 <div class="range-start">
                                     <output class="price__output" name="range-start" for="range">0</output><span class="price__dollar-simbol">$</span>
@@ -273,115 +274,7 @@
                         </div>
                     </form>
                 </div>
-                <div class="product-item-list">
-                    <div class="item">
-                        <a class="item__link" href="single_page.html">
-                            <img class="item__img" src="img/product-page-item1.jpg" alt="item1">
-                            <div class="item__description">
-                                <p class="item__name">Mango People T-shirt</p>
-                                <span class="item__cost">$52.00</span>
-                            </div>
-                        </a>
-                        <div class="item__add-to-cart-block">
-                            <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <a class="item__link" href="single_page.html">
-                            <img class="item__img" src="img/product-page-item2.jpg" alt="item1">
-                            <div class="item__description">
-                                <p class="item__name">Mango People T-shirt</p>
-                                <span class="item__cost">$52.00</span>
-                            </div>
-                        </a>
-                        <div class="item__add-to-cart-block">
-                            <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <a class="item__link" href="single_page.html">
-                            <img class="item__img" src="img/product-page-item3.jpg" alt="item1">
-                            <div class="item__description">
-                                <p class="item__name">Mango People T-shirt</p>
-                                <span class="item__cost">$52.00</span>
-                            </div>
-                        </a>
-                        <div class="item__add-to-cart-block">
-                            <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <a class="item__link" href="single_page.html">
-                            <img class="item__img" src="img/product-page-item4.jpg" alt="item1">
-                            <div class="item__description">
-                                <p class="item__name">Mango People T-shirt</p>
-                                <span class="item__cost">$52.00</span>
-                            </div>
-                        </a>
-                        <div class="item__add-to-cart-block">
-                            <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <a class="item__link" href="single_page.html">
-                            <img class="item__img" src="img/product-page-item5.jpg" alt="item1">
-                            <div class="item__description">
-                                <p class="item__name">Mango People T-shirt</p>
-                                <span class="item__cost">$52.00</span>
-                            </div>
-                        </a>
-                        <div class="item__add-to-cart-block">
-                            <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <a class="item__link" href="single_page.html">
-                            <img class="item__img" src="img/product-page-item6.jpg" alt="item1">
-                            <div class="item__description">
-                                <p class="item__name">Mango People T-shirt</p>
-                                <span class="item__cost">$52.00</span>
-                            </div>
-                        </a>
-                        <div class="item__add-to-cart-block">
-                            <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <a class="item__link" href="single_page.html">
-                            <img class="item__img" src="img/product-page-item7.jpg" alt="item1">
-                            <div class="item__description">
-                                <p class="item__name">Mango People T-shirt</p>
-                                <span class="item__cost">$52.00</span>
-                            </div>
-                        </a>
-                        <div class="item__add-to-cart-block">
-                            <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <a class="item__link" href="single_page.html">
-                            <img class="item__img" src="img/product-page-item8.jpg" alt="item1">
-                            <div class="item__description">
-                                <p class="item__name">Mango People T-shirt</p>
-                                <span class="item__cost">$52.00</span>
-                            </div>
-                        </a>
-                        <div class="item__add-to-cart-block">
-                            <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                        </div>
-                    </div>
-                    <div class="item">
-                        <a class="item__link" href="single_page.html">
-                            <img class="item__img" src="img/product-page-item9.jpg" alt="item1">
-                            <div class="item__description">
-                                <p class="item__name">Mango People T-shirt</p>
-                                <span class="item__cost">$52.00</span>
-                            </div>
-                        </a>
-                        <div class="item__add-to-cart-block">
-                            <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                        </div>
-                    </div>
+                <div class="product-item-list" id="product-item-list">
                 </div>
                 <nav class="product-item-list-nav product-right__nav">
                     <ul class="product-item-list-nav__list">
@@ -540,6 +433,7 @@
         </div>
     </footer>
 </div>
-<script src="js/shoppingCartLittle.js"></script>
+<script src="js/js.js"></script>
+<script src="js/catalog.js"></script>
 </body>
 </html>
