--- a/project/shopping_cart.html
+++ b/project/shopping_cart.html
@@ -320,6 +320,6 @@
     </footer>
 </div>
 <script src="js/shoppingCart.js"></script>
-<script src="js/shoppingCartLittle.js"></script>
+<script src="js/js.js"></script>
 </body>
 </html>
