--- a/project/single_page.html
+++ b/project/single_page.html
@@ -64,7 +64,7 @@
                                 </table>
                                 <div class="my-acc-menu__price">
                                     <p class="my-acc-menu__price-text">TOTAL</p>
-                                    <p class="my-acc-menu__price-text" id="my-acc-menu-price">$500.00</p>
+                                    <p class="my-acc-menu__price-text" id="my-acc-menu-price">$0</p>
                                 </div>
                                 <a class="my-acc-menu__button" href="checkout.html">Checkout</a>
                                 <a class="my-acc-menu__button" href="shopping_cart.html">Go&nbsp;to&nbsp;cart</a>
@@ -183,91 +183,10 @@
             </div>
         </div>
         <section class="product-description container">
-            <h2 class="product-description__h2">WOMEN COLLECTION</h2>
-            <h3 class="product-description__h3">Moschino Cheap And Chic</h3>
-            <p class="product-description__text">Compellingly actualize fully researched processes before proactive outsourcing. Progressively syndicate collaborative architectures before cutting-edge services. Completely visualize parallel core competencies rather than exceptional portals.</p>
-            <ul class="product-description__made">
-                <li class="product-description__made-list"><span>MATERIAL:</span> COTTON</li>
-                <li class="product-description__made-list"><span>DESIGNER:</span> BINBURHAN</li>
-            </ul>
-            <span class="product-description__price">
-$561
-</span>
-            <hr class="product-description__hr">
-            <form action="#" class="item-description-form">
-                <div class="item-description-form__group">
-                    <label for="color" class="item-description-form__label item-description-form__arrow">CHOOSE COLOR</label>
-                    <select id="color" class="item-description-form__select">
-                        <option value="red">Red</option>
-                        <option value="green">Green</option>
-                    </select>
-                </div>
-                <div class="item-description-form__group">
-                    <label for="size" class="item-description-form__label item-description-form__arrow">CHOOSE SIZE</label>
-                    <select id="size" name="size" class="item-description-form__select">
-                        <option value="XXL">XXL</option>
-                        <option value="XL">XL</option>
-                    </select>
-                </div>
-                <div class="item-description-form__group">
-                    <label for="quantity" class="item-description-form__label">QUANTITY</label>
-                    <input type="number" id="quantity" value="1" min="1" max="100" class="item-description-form__input">
-                </div>
-
-            </form>
-            <a href="#" class="product-description__to-cart"><i class="fa fa-shopping-cart product-description__to-cart-basket" aria-hidden="true"></i>Add to&nbsp;Cart</a>
         </section>
         <section class="recommend-items container">
             <h3 class="recommend-items__caption">you may like also</h3>
             <div class="recommend-items__list">
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/product-item1.png" alt="item1">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/product-item2.png" alt="item1">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/product-item3.png" alt="item1">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/product-item4.png" alt="item1">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
             </div>
         </section>
         <div class="subscribe-container">
@@ -388,7 +307,8 @@ $561
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script src="js/shoppingCartLittle.js"></script>
+<script src="js/js.js"></script>
+<script src="js/good.js"></script>
 </body>
 
 </html>
